--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html"
+    "livePreview.defaultPreviewPath": "/11.0+Bootstrap+Intro/11.0 Bootstrap Intro/index.html"
 }
